site/themes/mttt/sass/_classes.scss
.wrppr {
  margin: auto;
  padding: 0 1rem;
  max-width: var(--content-width);
}

.siteheader {
  margin-bottom: 2rem;
}

.mtt_logo {
  color: var(--head-color);
  stroke: var(--head-color);
}

.headlink {
  text-decoration: none;
  display: grid;
  grid-template-columns: 4.5rem auto;
  align-items: center;
  padding: 1rem 0 0 0;
  min-width: 17rem;
  margin-left: -1.15rem;

  .header_logo {
    width: 4.5rem;
    height: 4.5rem;
  }

  h1, .h1 {
    font-family: var(--brand-font);
    margin: 1.333rem 0 0 -.3rem;
    color: var(--head-color);
    &::first-letter { font-size: 0; }
  }
}

.site_description {
  margin: -1rem 0 0 4rem;
  padding: 0;
  font-size: .75rem;
  line-height: 1;
}

.navbar {
  padding: .5rem;
  display: flex;
  align-items: baseline;

  a {
    display: block;
    padding: 0 0 0 .5rem;
    margin-left: .5rem;
    border-left: 1px solid var(--accent-color);
    font-family: var(--system-fonts);
    text-decoration: none;

    &:first-child { margin-left: 0; padding-left: 0; border: 0 }
  }
}

.index_toc_line {
  & + & {
    margin-top: .25em;;
  }

  a.line {
    display: grid;
    grid-template-columns: auto max-content;
    grid-template-areas: "title date";
    align-items: first baseline;
    gap: 0 .25rem;
    text-decoration: none;

    &:link, &:visited { color: inherit; }

    .title {
      grid-area: title;
      display: inline-block;
      position:relative;
      overflow: hidden;
      font-size: 1.25rem;
      font-family: var(--system-fonts-serif);
      font-weight: normal;

      &::after {
        position: absolute;
        padding-left: .25ch;
        content: " . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . "
        ". . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . "
        ". . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . ";
        text-overflow: clip;
        text-align: right;
        font-size: 1rem;
        opacity: .42;
      }
    }

    .date {
      grid-area: date;
    }
  }

  footer { display: none; }
}

.article_body p {
  font-size: 110%;
  line-height: 1.75;

  // text justification and the web are not friends :'-(
  // thread @ https://news.ycombinator.com/item?id=25033136
  // text-align: justify;
  // text-justify: inter-character; // currently only working on FF
  // hyphens: auto;

  a {
    text-shadow: 0 0 0 var(--link-color);

    &:hover, &:focus {
      text-shadow: 0 0 0 var(--link-hl-color);
    }
  }
}

.article_body {
  & > p:first-of-type {
    font-style: italic;
    filter: brightness(1.5);
  }

  & > p:first-of-type::after {
    display: block;
    margin-top: 1.5em;
    text-align: center;
    font-style: normal;
    opacity: .125;
    // also check theme.toml for alternatives
    content: "· · ✽ · ·";
  }
}

.hentry {
  .post_title {
    font-family: var(--system-fonts-serif);
    width: 105%;
    margin-left: -0.75rem;
    margin-right: -0.75rem;
    line-height: 1.25;
  }
}

.post_hero {
  picture {
    // hero images are always in 2:1 ratios
    padding-top: 2rem;
    padding-bottom: 50%;
    margin-bottom: .5rem;
  }
}

.subtitle {
  font-family: var(--system-fonts);
  font-size: 175%;
}

.post_content_info {
  display: flex;
  justify-content: space-between;
  font-size: .8rem;
  opacity: .7;

  .wordcount { display: none; }
}

.modified_at,
.meta > .data,
.list-meta .data {
  display: none;
}

.meta {
  margin-top: 2rem;
  font-size: .85rem;
  word-wrap: break-word;

  .info {
    display: grid;
    grid-template-columns: 2rem auto;
    align-items: top;
    line-height: 3;

    // .icon { }
    .data { word-spacing: .5rem; }
  }
}

.suggestions {
  margin: 3rem -1rem 1rem -1rem;
  padding: 1rem;
  background: var(--accent-color);
  border-radius: .5em;

  h4 {
    margin: 0;
    font-variant: small-caps;
    font-weight: lighter;
    text-shadow: 0 0 0 var(--head-dark-color);
  }

  .li {
    margin-left: 2rem;
  }
}

.footer {
  margin-top: 3rem;
  font-size: .8rem;

  img {
    margin: 0; padding: 0; border: 0;
    width: 1px; height: 1px;
    float: left;
  }
}

.article_body .taglist {
  line-height: 3;
  word-spacing: 1rem;
}

// .center { text-align: center; }
// .left { text-align: left; text-align: start; }
.right { text-align: right; text-align: end; }
// .justify { text-align: justify; }

